<resources>
    <string name="app_name">YourFamousCoach</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openNavDrawer">Open</string>
    <string name="closeNavDrawer">Close</string>
    <string name="quote_notification_channel_name">quote_notification</string>
    <string name="quote_notification_channel_description">notification to start app home screen</string>
    <string name="quote_channel_id">qc</string>
    <string name="quote_notification_title">Daily Motivation</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="language_settings">Language</string>
    <string name="notifications_settings">Notifications</string>
    <string name="privacy_policy_settings">Privacy Policy</string>
    <string name="terms_and_conditions_settings">Terms and Conditions</string>
    <string name="rate_us_settings">Rate Us</string>
    <string name="about_settings">About</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>